2002-03-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Tidy a little ... fix non-static declarations.
	* Source/NSString.m: ([-initWithData:encoding:]) Correct the length
	of the string produced when unicode data is missing its 2 byte
	prefix. Simplification of code based on suggestion by Yen-Ju Chen
	* Source/GSString.m: Fixes for cString infor from unicode by
	Yen-Ju Chen.

Wed Mar 13 16:55:49 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/Additions/GSXML.m ([GSSAXHandler
	-externalSubset:externalID:ystemID:]): Fixed typo, 'ystemID:'
	instead of 'systemID:'.

2002-03-13  Adam Fedor  <fedor@gnu.org>

	* Tools/gdomap.c (log): Redefine to gdomap_log to avoid conflict
	with syslog function on Darwin.

	* Source/NSProcessInfo.m (main): Use STRINGIFY to get proper
	name of constant string class.

2002-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSObjCRuntime.h: Remove bad markup in comments.
	* Headers/gnustep/base/NSString.h: Remove private class declaration
	and hide internals of NXConstantString behind dummy interface while
	improving comments.  Fix long overdue declaraction of methods in
	clsses rather than protocols.
	* Source/GSUserDefaults.h: removed
	* Source/GSPrivate.h: added
	* Source/GSCompatibility.m: fix for hidden private info.
	* Source/GSString.m: ditto
	* Source/NSArray.m: ditto
	* Source/NSCalendarDate.m: ditto
	* Source/NSDate.m: ditto
	* Source/NSDecimalNumber.m: ditto
	* Source/NSDictionary.m: ditto
	* Source/NSLog.m: ditto
	* Source/NSObjCRuntime.m: ditto
	* Source/NSScanner.m: ditto
	* Source/NSSerializer.m: ditto
	* Source/NSString.m: ditto
	* Source/NSUser.m: ditto
	* Source/NSUserDefaults.m: ditto
	General tidyups to hide some internal workings which should really
	not be exposed in public headers.

2002-03-12  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: regenerated with latest data.

2002-03-12  Adam Fedor  <fedor@gnu.org>
